# ray-tracer

./: .gitignore  Cargo.toml
src/: bvh.rs  camera.rs  geometry.rs  main.rs  math.rs  matrix.rs  ppm.rs  ray_tracer.rs  scene.rs  shading.rs  test_scenes.rs  vec3.rs  vector.rs  vector_simd.rs
src/shading/: brdf.rs  lights.rs  materials.rs  mod.rs  monte_carlo.rs
