[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["Jacob Fleetwood <jacobfleetwood@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 3


[dependencies]

rand = "0.7.2"
image = "0.22.3"
num_cpus = "1.11.1"
crossbeam-utils = "0.7.0"
